Fixed a typo in the TestIdeals paper.

--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -918,9 +918,10 @@ After the test element $c$ has been identified, we pull back the ideal $\omega_R
 \begin{equation}
 \label{eq.AscendIdealExplanation}
 \begin{array}{lll}
-J_1 &\colonequals   J + (c J)^{[1/p]} & \\
-J_2 &\colonequals   J_1 + (c J_1)^{[1/p]} & = J + (c J)^{[1/p]} + (c^{1+p} J)^{[1/p^2]} \\
-J_3 &\colonequals    J_2 + (cJ_2)^{[1/p]} & = J + (c J)^{[1/p]} + (c^{1+p} J)^{[1/p^2]} + (c^{1+p+p^2} J)^{[1/p^3]} \\
+J_0 & \colonequals  cJ \\
+J_1 &\colonequals   J_0 + (u J_0)^{[1/p]} & \\
+J_2 &\colonequals   J_1 + (u J_1)^{[1/p]} & = J_0 + (u J_0)^{[1/p]} + (u^{1+p} J_0)^{[1/p^2]} \\
+J_3 &\colonequals    J_2 + (uJ_2)^{[1/p]} & = J_0 + (u J_0)^{[1/p]} + (u^{1+p} J_0)^{[1/p^2]} + (u^{1+p+p^2} J_0)^{[1/p^3]} \\
 \vdots
 \end{array}
 \end{equation}
