--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -141,8 +141,8 @@ Algorithms for computing $F$-pure thresholds from \cite{HernandezFInvariantsOfDi
 
 \subsection*{Acknowledgements}
 The authors thank other contributors of the \emph{TestIdeals} package, namely
-Erin Bela, Juliette Bruce, Drew Ellingson, Matthew Mastroeni, and Maral Mostafazadehfard.
-This paper, and the finishing touches to the \emph{TestIdeals} package, were made at the University of Utah in 2018, and the visiting authors thank the Department of Mathematics for its hospitality.  The authors also thank the referees for their numerous useful comments on both this paper and the code.
+Erin Bela, Juliette Bruce, Drew Ellingson, Matthew Mastroeni, and Maral Mostafazadehfard.  We also thank Thomas Polstra for pointing out typos in a previous version of this paper.
+This paper, and the finishing touches to the \emph{TestIdeals} package, were made at the University of Utah in 2018, and the visiting authors thank the Department of Mathematics for its hospitality.  The authors also thank the referees for their numerous useful comments on both this paper and the code.  Additional work on the package was also done at the Institute of Mathematics and its Applications for its generous support for a 2019 Coding Sprint on the \emph{FThresholds} package.
 
 \section{Frobenius powers and Frobenius roots}\label{Section: Frobenius powers and Frobenius roots}
 
